fix small layout issue with bootstrap 3.0 (fixes issue #295)

--- a/demos/js-webshim/minified/shims/styles/scss/forms-ext.scss
+++ b/demos/js-webshim/minified/shims/styles/scss/forms-ext.scss
@@ -2,7 +2,9 @@
 
 
 /* spinner control for time, number (usable for date, datetime-local) */
-.has-input-buttons {
+.has-input-buttons,
+input.has-input-buttons,
+span.has-input-buttons {
 	display: inline-block;
 }
 
@@ -70,6 +72,7 @@ input[type="color"] {
 }
 
 .input-buttons {
+	text-align: left;
 	
 	&.color-input-buttons {
 		margin-left: 2px;
